RESOLVED FIXED60191
Crash in PlatformCALayer ::replaceSublayer when layer has not superlayer
https://bugs.webkit.org/show_bug.cgi?id=60191
Summary Crash in PlatformCALayer ::replaceSublayer when layer has not superlayer
Chris Marrin
Reported 2011-05-04 11:38:24 PDT
PlatformCALayer ::replaceSublayer occasionally crashes because the current layer doesn't have a superlayer. I believe this is a benign case that happens when we are restructuring the tree. But currently it crashes. I will add protection against the null pointer and see if this avoids any other problems.
Attachments
Patch (1.79 KB, patch)
2011-05-04 11:41 PDT, Chris Marrin
simon.fraser: review+
Chris Marrin
Comment 1 2011-05-04 11:38:42 PDT
Chris Marrin
Comment 2 2011-05-04 11:41:41 PDT
Simon Fraser (smfr)
Comment 3 2011-05-04 11:43:38 PDT
Comment on attachment 92290 [details] Patch You could leave the assertion in since it would be nice to know when this happens.
Chris Marrin
Comment 4 2011-05-04 13:17:53 PDT
Note You need to log in before you can comment on or make changes to this bug.