2011-05-04  Chris Marrin  <cmarrin@apple.com>

Reviewed by Simon Fraser.

        Crash in PlatformCALayer ::replaceSublayer when layer has not superlayer
        https://bugs.webkit.org/show_bug.cgi?id=60191

        Skip replaceSublayer when there is no superlayer rather than asserting.
        This is probably not a problem and happens when restructuring the layer
        tree. Avoiding this crash will allow us to get more testing.

        * platform/graphics/ca/GraphicsLayerCA.cpp:
        (WebCore::GraphicsLayerCA::swapFromOrToTiledLayer):


Canonical link: https://commits.webkit.org/75466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85781 268f45cc-cd09-0410-ab3c-d52691b4dbfc